Laru studios launcher 2.0

--- a/lang/en_US.toml
+++ b/lang/en_US.toml
@@ -5,7 +5,7 @@ usernameEditButton = "Edit"
 settingsTooltip = "Settings"
 serverStatus = "SERVER"
 serverStatusPlaceholder = "OFFLINE"
-mojangStatus = "ZELTHORIAI SMP"
+mojangStatus = "LARU SMP"
 mojangStatusTooltipTitle = "Services"
 mojangStatusNETitle = "Non&nbsp;Essential"
 newsButton = "NEWS"
@@ -20,24 +20,24 @@ newsErrorNoneSpan = "No News"
 
 [ejs.login]
 loginCancelText = "Cancel"
-loginSubheader = "HASTA LOGIN"
+loginSubheader = "OFFLINE LOGIN"
 loginEmailError = "* Invalid Value"
-loginEmailPlaceholder = "EMAIL OR USERNAME"
+loginEmailPlaceholder = "USERNAME"
 loginPasswordError = "* Required"
 loginPasswordPlaceholder = "PASSWORD"
 loginForgotPasswordLink = "https://auth.zelthoriaismp.cloud/auth/forgot/"
-loginForgotPasswordText = "forgot password?"
-loginRememberMeText = "remember me?"
+loginForgotPasswordText = ""
+loginRememberMeText = ""
 loginButtonText = "LOGIN"
 loginNeedAccountLink = "https://auth.zelthoriaismp.cloud/auth/register"
-loginNeedAccountText = "Need an Account?"
-loginPasswordDisclaimer1 = "Your password is sent directly to Hasta Studios and never stored."
-loginPasswordDisclaimer2 = "Hasta Studios auth is 100% safe with your data"
+loginNeedAccountText = ""
+loginPasswordDisclaimer1 = ""
+loginPasswordDisclaimer2 = ""
 
 [ejs.loginOptions]
 loginOptionsTitle = "Login Options"
 loginWithMicrosoft = "Login with Microsoft"
-loginWithMojang = "Login with Hasta Studios"
+loginWithMojang = "Offline Login"
 cancelButton = "Cancel"
 
 [ejs.overlay]
@@ -63,8 +63,8 @@ tabAccountHeaderText = "Account Settings"
 tabAccountHeaderDesc = "Add new accounts or manage existing ones."
 microsoftAccount = "Microsoft"
 addMicrosoftAccount = "+ Add Microsoft Account"
-mojangAccount = "Hasta Studios"
-addMojangAccount = "+ Add Hasta Studios Account"
+mojangAccount = "Offline"
+addMojangAccount = "+ Add Offline Account"
 minecraftTabHeaderText = "Minecraft Settings"
 minecraftTabHeaderDesc = "Options related to game launch."
 gameResolutionTitle = "Game Resolution"
@@ -88,7 +88,7 @@ tabJavaHeaderDesc = "Manage the Java configuration (advanced)."
 memoryTitle = "Memory"
 maxRAM = "Maximum RAM"
 minRAM = "Minimum RAM"
-memoryDesc = "The recommended minimum RAM is 5 gigabytes. Setting the minimum and maximum values to the same value may reduce lag."
+memoryDesc = "The recommended minimum RAM is 4 gigabytes. Setting the minimum and maximum values to the same value may reduce lag."
 memoryTotalTitle = "Total"
 memoryAvailableTitle = "Available"
 javaExecutableTitle = "Java Executable"
@@ -213,8 +213,8 @@ checking = "Checking for News"
 
 [js.landing.discord]
 loading = "Loading game.."
-joining = "Joining the realms of zelthoriai"
-joined = "Exploring the island of zelthoriai!"
+joining = "Joining LaruSMP"
+joined = "Exploring Laru Island!"
 
 [js.overlay]
 dismiss = "Dismiss"
