--- a/lang/pt_BR.toml
+++ b/lang/pt_BR.toml
@@ -5,7 +5,7 @@ usernameEditButton = "Editar"
 settingsTooltip = "Configurações"
 serverStatus = "SERVIDOR"
 serverStatusPlaceholder = "OFFLINE"
-mojangStatus = "ZELTHORIAI SMP"
+mojangStatus = "LARU SMP"
 mojangStatusTooltipTitle = "Serviços"
 mojangStatusNETitle = "Não&nbsp;Essencial"
 newsButton = "NOTÍCIAS"
@@ -20,24 +20,24 @@ newsErrorNoneSpan = "Nenhuma Notícia"
 
 [ejs.login]
 loginCancelText = "Cancelar"
-loginSubheader = "HASTA LOGIN"
+loginSubheader = "OFFLINE LOGIN"
 loginEmailError = "* Valor Inválido"
-loginEmailPlaceholder = "EMAIL OU NOME DE USUÁRIO"
+loginEmailPlaceholder = "NOME DE USUÁRIO"
 loginPasswordError = "* Obrigatório"
 loginPasswordPlaceholder = "SENHA"
-loginForgotPasswordLink = "https://auth.zelthoriaismp.cloud/auth/forgot/"
-loginForgotPasswordText = "esqueceu a senha?"
-loginRememberMeText = "lembrar de mim?"
+loginForgotPasswordLink = ""
+loginForgotPasswordText = ""
+loginRememberMeText = ""
 loginButtonText = "LOGIN"
-loginNeedAccountLink = "https://auth.zelthoriaismp.cloud/auth/register"
-loginNeedAccountText = "Precisa de uma conta?"
-loginPasswordDisclaimer1 = "Sua senha é enviada diretamente para Hasta Studios e nunca é armazenada."
-loginPasswordDisclaimer2 = "A autenticação Hasta Studios é 100% segura com seus dados"
+loginNeedAccountLink = ""
+loginNeedAccountText = ""
+loginPasswordDisclaimer1 = ""
+loginPasswordDisclaimer2 = ""
 
 [ejs.loginOptions]
 loginOptionsTitle = "Opções de Login"
 loginWithMicrosoft = "Login com Microsoft"
-loginWithMojang = "Login com Hasta Studios"
+loginWithMojang = "Login Offline"
 cancelButton = "Cancelar"
 
 [ejs.overlay]
@@ -63,8 +63,8 @@ tabAccountHeaderText = "Configurações da Conta"
 tabAccountHeaderDesc = "Adicione novas contas ou gerencie as existentes."
 microsoftAccount = "Microsoft"
 addMicrosoftAccount = "+ Adicionar Conta Microsoft"
-mojangAccount = "Hasta Studios"
-addMojangAccount = "+ Adicionar Conta Hasta Studios"
+mojangAccount = "Offline"
+addMojangAccount = "+ Adicionar Conta Offline"
 minecraftTabHeaderText = "Configurações do Minecraft"
 minecraftTabHeaderDesc = "Opções relacionadas ao lançamento do jogo."
 gameResolutionTitle = "Resolução do Jogo"
@@ -88,7 +88,7 @@ tabJavaHeaderDesc = "Gerenciar a configuração do Java (avançado)."
 memoryTitle = "Memória"
 maxRAM = "RAM Máxima"
 minRAM = "RAM Mínima"
-memoryDesc = "A RAM mínima recomendada é de 5 gigabytes. Definir os valores mínimo e máximo para o mesmo valor pode reduzir o lag."
+memoryDesc = "A RAM mínima recomendada é de 4 gigabytes. Definir os valores mínimo e máximo para o mesmo valor pode reduzir o lag."
 memoryTotalTitle = "Total"
 memoryAvailableTitle = "Disponível"
 javaExecutableTitle = "Executável Java"
