--- a/lang/_custom.toml
+++ b/lang/_custom.toml
@@ -1,30 +1,30 @@
 # Custom Language File for Launcher Customizer
 
 [ejs.app]
-title = "Hasta Studios Launcher"
+title = "Laru Studios Launcher"
 
 [ejs.landing]
-mediaGitHubURL = "https://zelthoriaismp.cloud"
-mediaTwitterURL = "https://x.com/Zelthoriaismp87"
-mediaInstagramURL = "https://www.tiktok.com/@_zsmp_"
-mediaYouTubeURL = "https://youtube.com/@zsmpofc?si=bEThHknf_WXB7wqp"
-mediaDiscordURL = "https://discord.gg/zNWUXdt"
+mediaGitHubURL = "#"
+mediaTwitterURL = "https://x.com/larusmp?s=21d"
+mediaInstagramURL = "https://www.tiktok.com/@larusmp?_t=8l3iP5Dd770&_r=1"
+mediaYouTubeURL = "#"
+mediaDiscordURL = "https://discord.gg/TbSgutHwcT"
 
 [ejs.settings]
-sourceGithubLink = "https://github.com/Shisuiicaro/HastaStudiosLauncher"
-supportLink = "https://github.com/Shisuiicaro/HastaStudiosLauncher/issues"
+sourceGithubLink = "https://github.com/Shisuiicaro/Laru-studios-launcher"
+supportLink = "https://github.com/Shisuiicaro/Laru-studios-launcher/issues"
 selectLanguage = "Select a Language"
 changeLanguageTitle = "Change the launcher language"
 changeLanguageDesc = "You can change the language in the list below. This text will not change if you change the language so you can find your wayback here to change it back"
 
 [ejs.welcome]
-welcomeHeader = "WELCOME TO ZSMP"
+welcomeHeader = "WELCOME TO LARU"
 welcomeDescription = """
-Welcome to ZSMP, where your Minecraft adventure begins! Immerse yourself in a world of endless possibilities and unforgettable experiences on the best SMP server you can imagine. Join our vibrant community of players and embark on epic quests, build amazing creations, and forge lasting friendships.
+Bem-vindo ao LaruSMP, onde sua aventura no Minecraft começa! Um servidor que vai te dar experiências inesquecíveis no melhor servidor SMP que você pode imaginar. Junte-se à nossa comunidade e faça muitos amigos, sempre estaremos aqui para te acolher!
 
-But wait, there's more! To join in the fun, just hop onto our Discord server to self-register and gain access to our exclusive realm of emotions. Whether you're a seasoned explorer or a novice builder, ZSMP welcomes players of all skill levels.
+Mas espera, tem mais! Fique de olho no servidor do discord para todas as atualizações e não ficar por fora. Caso queira, temos formulários sempre abertos para STAFF, modeladores, editores, etc, se sinta a vontade!
 
-So, what are you waiting for? Click "Continue" and let the adventures begin!
+Então, o que você está esperando? Clique em "Continuar" e seja bem vindo a ilha Laru!
 """
 
 [ejs.overlay]
